--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -33,9 +33,9 @@
                 <RowConstraints maxHeight="30" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <HTMLEditor fx:id="content" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" prefHeight="200.0" prefWidth="535.0" GridPane.columnIndex="1" />
                 <ListView fx:id="noteList" prefHeight="200.0" prefWidth="200.0" GridPane.rowSpan="2" />
-                <Button onAction="#saveNote" mnemonicParsing="false" text="保存" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                <HTMLEditor fx:id="content" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" prefHeight="200.0" prefWidth="535.0" GridPane.columnIndex="1" />
+                <Button mnemonicParsing="false" onAction="#saveNote" text="保存" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin></Button>
