--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -12,7 +12,7 @@
                 <Menu mnemonicParsing="false" text="File">
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#newNote" text="New" />
-                        <MenuItem mnemonicParsing="false" text="Notice" />
+                        <MenuItem mnemonicParsing="false" onAction="#setNotice" text="Notice" />
                         <MenuItem mnemonicParsing="false" text="Exit" />
                     </items>
                 </Menu>
