--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -5,40 +5,52 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.web.*?>
 
-<FlowPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="768.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<FlowPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+          prefWidth="768.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="sample.Controller">
     <children>
         <MenuBar maxWidth="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="767.0">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#newNote" text="New" />
-                        <MenuItem mnemonicParsing="false" onAction="#setNotice" text="Notice" />
-                        <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit" />
+                        <MenuItem mnemonicParsing="false" onAction="#newNote" text="New"/>
+                        <MenuItem mnemonicParsing="false" onAction="#setNotice" text="Notice"/>
+                        <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit"/>
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Run Status">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Notice Task" onAction="#taskRunList"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#about" text="About" />
+                        <MenuItem mnemonicParsing="false" onAction="#about" text="About"/>
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
-        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="768.0">
+        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+                  prefHeight="375.0" prefWidth="768.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="10.0" prefWidth="233.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="566.0" minWidth="10.0" prefWidth="535.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="10.0" prefWidth="233.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="566.0" minWidth="10.0" prefWidth="535.0"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="30" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="30" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
-                <ListView fx:id="noteList" prefHeight="200.0" prefWidth="200.0" GridPane.rowSpan="2" />
-                <HTMLEditor fx:id="content" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;未选择笔记&lt;/body&gt;&lt;/html&gt;" prefHeight="200.0" prefWidth="535.0" GridPane.columnIndex="1" />
-                <Button mnemonicParsing="false" onAction="#saveNote" text="保存" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin></Button>
+                <ListView fx:id="noteList" prefHeight="200.0" prefWidth="200.0" GridPane.rowSpan="2"/>
+                <HTMLEditor fx:id="content"
+                            htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;未选择笔记&lt;/body&gt;&lt;/html&gt;"
+                            prefHeight="200.0" prefWidth="535.0" GridPane.columnIndex="1"/>
+                <Button mnemonicParsing="false" onAction="#saveNote" text="保存" GridPane.columnIndex="1"
+                        GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                    <GridPane.margin>
+                        <Insets right="10.0"/>
+                    </GridPane.margin>
+                </Button>
             </children>
         </GridPane>
     </children>
